--- a/lb2/VagrantVM/Vagrantfile
+++ b/lb2/VagrantVM/Vagrantfile
@@ -6,13 +6,18 @@
 # backwards compatibility). Please don't change it unless you know what
 # you're doing.
 Vagrant.configure("2") do |config|
-  # The most common configuration options are documented and commented below.
+  config.vm.box = "hashicorp/bionic64"
+  config.vm.network "private_network", ip: "192.168.100.10"
+  config.vm.hostname = "Obi-Ubuntu-Client-Samba"
+  config.vm.define "Obi-Ubuntu-Client-Samba"
+    # The most common configuration options are documented and commented below.
   # For a complete reference, please see the online documentation at
   # https://docs.vagrantup.com.
 
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://vagrantcloud.com/search.
-  config.vm.box = "base"
+  
+
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
@@ -37,7 +42,7 @@ Vagrant.configure("2") do |config|
   # Create a public network, which generally matched to bridged network.
   # Bridged networks make the machine appear as another physical device on
   # your network.
-  # config.vm.network "public_network"
+   
 
   # Share an additional folder to the guest VM. The first argument is
   # the path on the host to the actual folder. The second argument is
@@ -49,13 +54,16 @@ Vagrant.configure("2") do |config|
   # backing providers for Vagrant. These expose provider-specific options.
   # Example for VirtualBox:
   #
-  # config.vm.provider "virtualbox" do |vb|
+   config.vm.provider "virtualbox" do |vb|
+
   #   # Display the VirtualBox GUI when booting the machine
-  #   vb.gui = true
-  #
-  #   # Customize the amount of memory on the VM:
-  #   vb.memory = "1024"
-  # end
+   vb.gui = true
+  #   # Customize the amount of memory and CPU on the VM:
+   vb.memory = "2048"
+   vb.cpus = "2"
+      # Determine the name of the VM:
+   vb.name = "Obi-Ubuntu-Client-Samba"
+   end
   #
   # View the documentation for the provider you are using for more
   # information on available options.
@@ -63,8 +71,12 @@ Vagrant.configure("2") do |config|
   # Enable provisioning with a shell script. Additional provisioners such as
   # Ansible, Chef, Docker, Puppet and Salt are also available. Please see the
   # documentation for more information about their specific syntax and use.
-  # config.vm.provision "shell", inline: <<-SHELL
-  #   apt-get update
-  #   apt-get install -y apache2
-  # SHELL
+  config.vm.provision "shell", inline: <<-SHELL
+    apt-get update
+    apt-get install -y samba
+  SHELL
+
+  config.vm.provision "shell", run: "always", inline: <<-SHELL
+ echo "Hello From the Vagrantfile"
+  SHELL
 end
