--- a/lb2/VagrantVM/Vagrantfile
+++ b/lb2/VagrantVM/Vagrantfile
@@ -7,9 +7,9 @@
 # you're doing.
 Vagrant.configure("2") do |config|
   config.vm.box = "hashicorp/bionic64"
-  config.vm.network "private_network", ip: "192.168.100.10"
-  config.vm.hostname = "Obi-Ubuntu-Client-Samba"
-  config.vm.define "Obi-Ubuntu-Client-Samba"
+  config.vm.network "public_network", ip: "192.168.1.170", bridge: "Intel(R) Ethernet Connection (4) I219-LM"
+  config.vm.hostname = "Obi-Ubuntu-Client-Samba-2"
+  config.vm.define "Obi-Ubuntu-Client-Samba-2"
     # The most common configuration options are documented and commented below.
   # For a complete reference, please see the online documentation at
   # https://docs.vagrantup.com.
@@ -62,7 +62,7 @@ Vagrant.configure("2") do |config|
    vb.memory = "2048"
    vb.cpus = "2"
       # Determine the name of the VM:
-   vb.name = "Obi-Ubuntu-Client-Samba"
+   vb.name = "Obi-Ubuntu-Client-Samba-2"
    end
   #
   # View the documentation for the provider you are using for more
@@ -72,14 +72,20 @@ Vagrant.configure("2") do |config|
   # Ansible, Chef, Docker, Puppet and Salt are also available. Please see the
   # documentation for more information about their specific syntax and use.
   config.vm.provision "shell", inline: <<-SHELL
+    set -e
+    
     apt-get update
     apt-get install -y samba
+    
     sudo mkdir /home/vagrant/obi-share
-    systemctl restart smbd
-    sudo mv /etc/samba/smb.conf /etc/samba/smb.conf.old
-    sudo wget -o /etc/samba/smb.conf 
+    sudo chown -R root.root /home/vagrant/obi-share
 
-  SHELL
+    sudo mv /etc/samba/smb.conf /etc/samba/smb.conf.old
+    sudo wget -P /etc/samba/ https://raw.githubusercontent.com/Obi1Chris/M300_lb/main/smb.conf
+        
+    sudo systemctl restart smbd
+  
+    SHELL
 
   config.vm.provision "shell", run: "always", inline: <<-SHELL
  echo "Hello From the Vagrantfile"
