Fixed Share Permissions

--- a/smb.conf
+++ b/smb.conf
@@ -7,6 +7,6 @@
     comment = my test share
     path = /home/vagrant/obi-share
     guest ok = yes
-    force user = vagrant
-    force group = vagrant
-    read only = no
+    valid users = vagrant
+    writeable = yes
+    browseable = yes
