--- a/lb2/VagrantVM/Vagrantfile
+++ b/lb2/VagrantVM/Vagrantfile
@@ -7,7 +7,7 @@
 # you're doing.
 Vagrant.configure("2") do |config|
   config.vm.box = "hashicorp/bionic64"
-  config.vm.network "public_network", ip: "192.168.1.170", bridge: "Intel(R) Ethernet Connection (4) I219-LM"
+  config.vm.network "public_network", ip: "192.168.1.160", bridge: "Intel(R) Dual Band Wireless-AC 8265"
   config.vm.hostname = "Obi-Ubuntu-Client-Samba-2"
   config.vm.define "Obi-Ubuntu-Client-Samba-2"
     # The most common configuration options are documented and commented below.
@@ -78,7 +78,7 @@ Vagrant.configure("2") do |config|
     apt-get install -y samba
     
     sudo mkdir /home/vagrant/obi-share
-    sudo chown -R root.root /home/vagrant/obi-share
+    sudo chown vagrant:vagrant /home/vagrant/obi-share
 
     sudo mv /etc/samba/smb.conf /etc/samba/smb.conf.old
     sudo wget -P /etc/samba/ https://raw.githubusercontent.com/Obi1Chris/M300_lb/main/smb.conf
