--- a/lb2/VagrantVM/Vagrantfile
+++ b/lb2/VagrantVM/Vagrantfile
@@ -84,16 +84,16 @@ Vagrant.configure("2") do |config|
     sudo wget -P /etc/samba/ https://raw.githubusercontent.com/Obi1Chris/M300_lb/main/smb.conf
     
     
-# testing out smbpasswd automation
+# set smbpasswd automation
 USER=vagrant
 PASSW=obi123
-#(echo vagrant; echo vagrant) | smbpasswd -s
+
 echo -ne "$PASSW\n$PASSW\n" | sudo smbpasswd -a -s $USER
 
 sudo systemctl restart smbd
   
     SHELL
-
+# last command when VM is created
   config.vm.provision "shell", run: "always", inline: <<-SHELL
  echo "Hello From Obi's Vagrantfile"
   SHELL
