--- a/lb3/dockerfile
+++ b/lb3/dockerfile
@@ -1,100 +1,4 @@
-# -*- mode: ruby -*-
-# vi: set ft=ruby :
-
-# All Vagrant configuration is done below. The "2" in Vagrant.configure
-# configures the configuration version (we support older styles for
-# backwards compatibility). Please don't change it unless you know what
-# you're doing.
-Vagrant.configure("2") do |config|
-  config.vm.box = "hashicorp/bionic64"
-  config.vm.network "public_network", ip: "192.168.1.180", bridge: "Intel(R) Dual Band Wireless-AC 8265"
-  config.vm.hostname = "Obi-Ubuntu-Client-Samba-3"
-  config.vm.define "Obi-Ubuntu-Client-Samba-3"
-    # The most common configuration options are documented and commented below.
-  # For a complete reference, please see the online documentation at
-  # https://docs.vagrantup.com.
-
-  # Every Vagrant development environment requires a box. You can search for
-  # boxes at https://vagrantcloud.com/search.
-  
-
-
-  # Disable automatic box update checking. If you disable this, then
-  # boxes will only be checked for updates when the user runs
-  # `vagrant box outdated`. This is not recommended.
-  # config.vm.box_check_update = false
-
-  # Create a forwarded port mapping which allows access to a specific port
-  # within the machine from a port on the host machine. In the example below,
-  # accessing "localhost:8080" will access port 80 on the guest machine.
-  # NOTE: This will enable public access to the opened port
-  # config.vm.network "forwarded_port", guest: 80, host: 8080
-
-  # Create a forwarded port mapping which allows access to a specific port
-  # within the machine from a port on the host machine and only allow access
-  # via 127.0.0.1 to disable public access
-  # config.vm.network "forwarded_port", guest: 80, host: 8080, host_ip: "127.0.0.1"
-
-  # Create a private network, which allows host-only access to the machine
-  # using a specific IP.
-  # config.vm.network "private_network", ip: "192.168.33.10"
-
-  # Create a public network, which generally matched to bridged network.
-  # Bridged networks make the machine appear as another physical device on
-  # your network.
-   
-
-  # Share an additional folder to the guest VM. The first argument is
-  # the path on the host to the actual folder. The second argument is
-  # the path on the guest to mount the folder. And the optional third
-  # argument is a set of non-required options.
-  # config.vm.synced_folder "../data", "/vagrant_data"
-
-  # Provider-specific configuration so you can fine-tune various
-  # backing providers for Vagrant. These expose provider-specific options.
-  # Example for VirtualBox:
-  #
-   config.vm.provider "virtualbox" do |vb|
-
-  #   # Display the VirtualBox GUI when booting the machine
-   vb.gui = false
-  #   # Customize the amount of memory and CPU on the VM:
-   vb.memory = "2048"
-   vb.cpus = "2"
-      # Determine the name of the VM:
-   vb.name = "Obi-Ubuntu-Client-Samba-3"
-   end
-  #
-  # View the documentation for the provider you are using for more
-  # information on available options.
-
-  # Enable provisioning with a shell script. Additional provisioners such as
-  # Ansible, Chef, Docker, Puppet and Salt are also available. Please see the
-  # documentation for more information about their specific syntax and use.
-  config.vm.provision "shell", inline: <<-SHELL
-    set -e
-    
-    apt-get update
-    apt-get install -y samba
-    
-    sudo mkdir /home/vagrant/obi-share
-    sudo chown vagrant:vagrant /home/vagrant/obi-share
-
-    sudo mv /etc/samba/smb.conf /etc/samba/smb.conf.old
-    sudo wget -P /etc/samba/ https://raw.githubusercontent.com/Obi1Chris/M300_lb/main/lb2/smb.conf
-    
-    
-# set smbpasswd automation
-USER=vagrant
-PASSW=obi123
-
-echo -ne "$PASSW\n$PASSW\n" | sudo smbpasswd -a -s $USER
-
-sudo systemctl restart smbd
-  
-    SHELL
-# last command when VM is created
-  config.vm.provision "shell", run: "always", inline: <<-SHELL
- echo "Hello From Obi's Vagrantfile"
-  SHELL
-end
+FROM php:7.3.3-apache
+RUN apt-update && apt-get upgrade -y
+RUN docker-php-ext-install mysqli
+EXPOSE 80
