--- a/lb3/docker-compose.yml
+++ b/lb3/docker-compose.yml
@@ -3,8 +3,8 @@ services:
   web:
     build: 
       context: ./php
-      dockerfile: Dockerfile
-    container_name: php73
+      dockerfile: dockerfile
+    container_name: php
     depends_on:
       - db
     volumes:
