--- a/lb3/docker-compose.yml
+++ b/lb3/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.3'
 services:
   web:
     build: 
-      context: ./php
+      context: ./
       dockerfile: dockerfile
     container_name: php
     depends_on:
